# DocumentationPublic

./: .gitignore  README.md
03 USER MANUALS/00 KEYWORD REFERENCE MANUAL/content/: Pointers.md
03 USER MANUALS/00 KEYWORD REFERENCE MANUAL/content/.obsidian/: app.json  appearance.json  community-plugins.json  workspace.json
03 USER MANUALS/00 KEYWORD REFERENCE MANUAL/content/01-keyword-usage-and-syntax/: complex-can-code.md  syntax.md
03 USER MANUALS/00 KEYWORD REFERENCE MANUAL/content/04-error-codes/: controller-error-codes.md  instruction-error-codes.md
03 USER MANUALS/00 KEYWORD REFERENCE MANUAL/content/05-legacy-keywords/: AOutShifts.md  EncSinCosHWEn.md  IndirectArray.md  IndirectDo.md  IndirectIndex.md  IndirectValue.md
03 USER MANUALS/00 KEYWORD REFERENCE MANUAL/content/06-appendix/: customisable-filter-filtdef.md
03 USER MANUALS/00 KEYWORD REFERENCE MANUAL/content/_triage/: 00-overview.md  (+1 more)
docs/: web-app-integration-brief.md
docs/superpowers/plans/: 2026-05-27-keyword-generator.md
docs/superpowers/specs/: 2026-05-27-keyword-documentation-system-design.md
tools/keyword-docgen/: README.md  keyword-frontmatter.schema.yml  pyproject.toml
tools/keyword-docgen/keyworddocgen/: __init__.py  cli.py  defines.py  frontmatter.py  manifest.py  merge.py  model.py  table_parser.py
tools/keyword-docgen/tests/: test_cli.py  test_defines.py  test_frontmatter.py  test_manifest.py  test_merge.py  test_model.py  test_smoke.py  test_table_parser.py  test_table_parser_develop.py
tools/keyword-docgen/tests/fixtures/: defs.h  params_sample.c  params_sample_develop.c
(+922 files in other folders)
