[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "keyworddocgen"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
keyword-docgen = "keyworddocgen.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
